@@ -33,6 +33,9 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.repository.support.Querydsl;
 import org.springframework.test.util.ReflectionTestUtils;
 
 @ExtendWith(MockitoExtension.class)
@@ -47,12 +50,16 @@ class CustomizedProcessInstanceRepositoryImplTest {
     @Mock
     private JPAQuery<ProcessInstanceEntity> jpaQuery;
 
+    @Mock
+    private Querydsl querydsl;
+
     private CustomizedProcessInstanceRepositoryImpl repository;
 
     @BeforeEach
     void setUp() {
         repository = new CustomizedProcessInstanceRepositoryImpl(entityManager);
         ReflectionTestUtils.setField(repository, "queryFactory", queryFactory);
+        ReflectionTestUtils.setField(repository, "querydsl", querydsl);
     }
 
     @Test
@@ -84,7 +91,9 @@ class CustomizedProcessInstanceRepositoryImplTest {
         List<ProcessInstanceEntity> subprocessesList = createSubprocessInstances(2, parentIdOne);
         subprocessesList.addAll(createSubprocessInstances(3, parentIdTwo));
 
-        Map<String, Set<QueryCloudSubprocessInstance>> result = repository.groupSubprocesses(subprocessesList);
+        Page<ProcessInstanceEntity> subprocesses = new PageImpl<>(subprocessesList);
+
+        Map<String, Set<QueryCloudSubprocessInstance>> result = repository.groupSubprocesses(subprocesses);
 
         assertThat(result).isNotNull();
         assertThat(result).hasSize(2);
@@ -109,6 +118,8 @@ class CustomizedProcessInstanceRepositoryImplTest {
 
         assertThat(result).isNotNull();
         assertThat(result).hasSize(2);
+        assertThat(result.getFirst().getId()).isNotNull();
+        assertThat(result.get(1).getId()).isNotNull();
 
         verify(queryFactory).selectFrom(processInstanceEntity);
         verify(jpaQuery).where(processInstanceEntity.parentId.eq(parentId));
@@ -118,6 +129,7 @@ class CustomizedProcessInstanceRepositoryImplTest {
     @Test
     void testFindSubprocessesByParentIds() {
         List<String> parentIds = Arrays.asList("parent1", "parent2");
+        Pageable pageable = PageRequest.of(0, 10);
 
         List<ProcessInstanceEntity> expectedSubprocesses = createSubprocessInstances(2, "parent1");
         expectedSubprocesses.addAll(createSubprocessInstances(3, "parent2"));
@@ -127,11 +139,14 @@ class CustomizedProcessInstanceRepositoryImplTest {
         when(queryFactory.selectFrom(processInstanceEntity)).thenReturn(jpaQuery);
         when(jpaQuery.where(processInstanceEntity.parentId.in(parentIds))).thenReturn(jpaQuery);
         when(jpaQuery.fetch()).thenReturn(expectedSubprocesses);
+        when(querydsl.applyPagination(pageable, jpaQuery)).thenReturn(jpaQuery);
 
-        List<ProcessInstanceEntity> result = repository.findSubprocessesByParentIds(parentIds);
+        Page<ProcessInstanceEntity> result = repository.findSubprocessesByParentIds(parentIds, pageable);
 
         assertThat(result).isNotNull();
-        assertThat(result).hasSize(5);
+        assertThat(result.getTotalElements()).isEqualTo(5);
+        assertThat(result.getContent().getFirst().getId()).isNotNull();
+        assertThat(result.getContent().get(1).getId()).isNotNull();
 
         verify(queryFactory).selectFrom(processInstanceEntity);
         verify(jpaQuery).where(processInstanceEntity.parentId.in(parentIds));
@@ -139,182 +154,51 @@ class CustomizedProcessInstanceRepositoryImplTest {
     }
 
     @Test
-    void testBuildChildrenByParentIdMap_groupsDirectChildrenCorrectly() {
-        String parentId = UUID.randomUUID().toString();
-        List<ProcessInstanceEntity> children = createSubprocessInstances(3, parentId);
-
-        Map<String, Set<QueryCloudSubprocessInstance>> result = repository.buildChildrenByParentIdMap(children);
-
-        assertThat(result).hasSize(1);
-        assertThat(result.get(parentId)).hasSize(3);
-    }
-
-    @Test
-    void testBuildChildrenByParentIdMap_ignoresEntriesWithNullParentId() {
-        ProcessInstanceEntity noParent = createProcessInstance("1"); // parentId set to null by helper
-        ProcessInstanceEntity withParent = createProcessInstance(UUID.randomUUID().toString());
-
-        Map<String, Set<QueryCloudSubprocessInstance>> result = repository.buildChildrenByParentIdMap(
-            List.of(noParent, withParent)
+    void testMapSubprocesses() {
+        List<ProcessInstanceEntity> processInstancesList = createParentProcessInstances(2);
+        List<String> parentIds = Arrays.asList(
+            processInstancesList.getFirst().getId(),
+            processInstancesList.getLast().getId()
         );
+        Page<ProcessInstanceEntity> processInstances = new PageImpl<>(processInstancesList);
+        Pageable pageable = PageRequest.of(0, 10);
 
-        assertThat(result).doesNotContainKey(null);
-    }
-
-    @Test
-    void testCollectAllSubprocesses_returnsEmptyWhenNoChildren() {
-        Set<QueryCloudSubprocessInstance> result = repository.collectAllSubprocesses("root", Map.of());
-        assertThat(result).isEmpty();
-    }
-
-    @Test
-    void testCollectAllSubprocesses_returnsDeepDescendants() {
-        String rootId = "root";
-        String child1Id = "child1";
-        String child2Id = "child2";
-        String grandchild1Id = "gc1";
-        String grandchild2Id = "gc2";
-
-        QueryCloudSubprocessInstance child1 = subprocessRef(child1Id);
-        QueryCloudSubprocessInstance child2 = subprocessRef(child2Id);
-        QueryCloudSubprocessInstance gc1 = subprocessRef(grandchild1Id);
-        QueryCloudSubprocessInstance gc2 = subprocessRef(grandchild2Id);
-
-        Map<String, Set<QueryCloudSubprocessInstance>> childrenMap = Map.of(
-            rootId,
-            Set.of(child1, child2),
-            child1Id,
-            Set.of(gc1, gc2)
+        List<ProcessInstanceEntity> subprocessesList = createSubprocessInstances(
+            2,
+            processInstancesList.getFirst().getId()
         );
+        subprocessesList.addAll(createSubprocessInstances(3, processInstancesList.get(1).getId()));
 
-        Set<QueryCloudSubprocessInstance> result = repository.collectAllSubprocesses(rootId, childrenMap);
+        QProcessInstanceEntity processInstanceEntity = QProcessInstanceEntity.processInstanceEntity;
 
-        assertThat(result)
-            .hasSize(4)
-            .extracting(QueryCloudSubprocessInstance::getId)
-            .containsExactlyInAnyOrder(child1Id, child2Id, grandchild1Id, grandchild2Id);
+        when(queryFactory.selectFrom(processInstanceEntity)).thenReturn(jpaQuery);
+        when(jpaQuery.where(processInstanceEntity.parentId.in(parentIds))).thenReturn(jpaQuery);
+        when(jpaQuery.fetch()).thenReturn(subprocessesList);
+        when(querydsl.applyPagination(pageable, jpaQuery)).thenReturn(jpaQuery);
+
+        Page<ProcessInstanceEntity> result = repository.mapSubprocesses(processInstances, pageable);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getTotalElements()).isEqualTo(2);
+        assertThat(result.getContent().getFirst().getSubprocesses()).isNotNull();
+        assertThat(result.getContent().get(1).getSubprocesses()).isNotNull();
     }
 
     @Test
-    void testMapSubprocesses_fetchesAllLevelsInOneBulkQuery() {
-        String rootId = UUID.randomUUID().toString();
+    void testMapSubprocessesForProcessInstance() {
+        ProcessInstanceEntity entity = createProcessInstance("1");
+        String parentId = entity.getId();
+        List<ProcessInstanceEntity> expectedSubprocesses = createSubprocessInstances(2, parentId);
 
-        // Two top-level process instances sharing the same root
-        ProcessInstanceEntity parent1 = createParentWithRoot(rootId);
-        ProcessInstanceEntity parent2 = createParentWithRoot(rootId);
+        QProcessInstanceEntity processInstanceEntity = QProcessInstanceEntity.processInstanceEntity;
 
-        // Direct children of parent1
-        ProcessInstanceEntity child1 = createSubprocessOf(parent1.getId(), rootId);
-        ProcessInstanceEntity child2 = createSubprocessOf(parent1.getId(), rootId);
-        // Grandchild (child of child1)
-        ProcessInstanceEntity grandchild = createSubprocessOf(child1.getId(), rootId);
-        // Direct child of parent2
-        ProcessInstanceEntity child3 = createSubprocessOf(parent2.getId(), rootId);
-
-        Page<ProcessInstanceEntity> processInstances = new PageImpl<>(List.of(parent1, parent2));
-        Set<String> pageIds = Set.of(parent1.getId(), parent2.getId());
-
-        QProcessInstanceEntity q = QProcessInstanceEntity.processInstanceEntity;
-        when(queryFactory.selectFrom(q)).thenReturn(jpaQuery);
-        when(jpaQuery.where(q.rootProcessInstanceId.in(List.of(rootId)).and(q.id.notIn(pageIds)))).thenReturn(jpaQuery);
-        when(jpaQuery.fetch()).thenReturn(List.of(child1, child2, grandchild, child3));
-
-        Page<ProcessInstanceEntity> result = repository.mapSubprocesses(processInstances);
-
-        // parent1 should have child1, child2, and grandchild (all 3 levels)
-        assertThat(result.getContent().get(0).getSubprocesses())
-            .hasSize(3)
-            .extracting(QueryCloudSubprocessInstance::getId)
-            .containsExactlyInAnyOrder(child1.getId(), child2.getId(), grandchild.getId());
-
-        // parent2 should have only child3
-        assertThat(result.getContent().get(1).getSubprocesses())
-            .hasSize(1)
-            .extracting(QueryCloudSubprocessInstance::getId)
-            .containsExactly(child3.getId());
-
-        // Only ONE database query should have been issued
-        verify(queryFactory, times(1)).selectFrom(q);
-    }
-
-    @Test
-    void testMapSubprocessesForProcessInstance_returnsDeepSubprocesses() {
-        String rootId = UUID.randomUUID().toString();
-        ProcessInstanceEntity entity = createParentWithRoot(rootId);
-
-        ProcessInstanceEntity child = createSubprocessOf(entity.getId(), rootId);
-        ProcessInstanceEntity grandchild = createSubprocessOf(child.getId(), rootId);
-
-        QProcessInstanceEntity q = QProcessInstanceEntity.processInstanceEntity;
-        when(queryFactory.selectFrom(q)).thenReturn(jpaQuery);
-        when(jpaQuery.where(q.rootProcessInstanceId.in(List.of(rootId)).and(q.id.notIn(Set.of(entity.getId())))))
-            .thenReturn(jpaQuery);
-        when(jpaQuery.fetch()).thenReturn(List.of(child, grandchild));
+        when(queryFactory.selectFrom(processInstanceEntity)).thenReturn(jpaQuery);
+        when(jpaQuery.where(processInstanceEntity.parentId.eq(parentId))).thenReturn(jpaQuery);
+        when(jpaQuery.fetch()).thenReturn(expectedSubprocesses);
 
         ProcessInstanceEntity result = repository.mapSubprocesses(entity);
 
-        assertThat(result.getSubprocesses())
-            .hasSize(2)
-            .extracting(QueryCloudSubprocessInstance::getId)
-            .containsExactlyInAnyOrder(child.getId(), grandchild.getId());
-    }
-
-    @Test
-    void testMapSubprocessesForProcessInstance_nullRootId_returnsEmpty() {
-        ProcessInstanceEntity entity = new ProcessInstanceEntity();
-        entity.setId(UUID.randomUUID().toString());
-
-        ProcessInstanceEntity result = repository.mapSubprocesses(entity);
-
-        assertThat(result.getSubprocesses()).isEmpty();
-        verifyNoInteractions(queryFactory);
-    }
-
-    @Test
-    void testMapAllLinkedProcesses() {
-        List<ProcessInstanceEntity> parents = createParentProcessInstances(2);
-        String parentId1 = parents.get(0).getId();
-        String parentId2 = parents.get(1).getId();
-        Page<ProcessInstanceEntity> processInstances = new PageImpl<>(parents);
-
-        ProcessInstanceEntity linked1 = createProcessInstance(UUID.randomUUID().toString());
-        linked1.setLinkedProcessInstanceId(parentId1);
-        ProcessInstanceEntity linked2 = createProcessInstance(UUID.randomUUID().toString());
-        linked2.setLinkedProcessInstanceId(parentId1);
-        ProcessInstanceEntity linked3 = createProcessInstance(UUID.randomUUID().toString());
-        linked3.setLinkedProcessInstanceId(parentId2);
-
-        QProcessInstanceEntity q = QProcessInstanceEntity.processInstanceEntity;
-        when(queryFactory.selectFrom(q)).thenReturn(jpaQuery);
-        when(jpaQuery.where(q.linkedProcessInstanceId.in(List.of(parentId1, parentId2)))).thenReturn(jpaQuery);
-        when(jpaQuery.fetch()).thenReturn(List.of(linked1, linked2, linked3));
-
-        Page<ProcessInstanceEntity> result = repository.mapAllLinkedProcesses(processInstances);
-
-        assertThat(result.getContent().get(0).getLinkedProcesses()).hasSize(2);
-        assertThat(result.getContent().get(1).getLinkedProcesses()).hasSize(1);
-    }
-
-    private static QueryCloudSubprocessInstance subprocessRef(String id) {
-        QueryCloudSubprocessInstance ref = new QueryCloudSubprocessInstance();
-        ref.setId(id);
-        return ref;
-    }
-
-    private static ProcessInstanceEntity createParentWithRoot(String rootId) {
-        ProcessInstanceEntity e = new ProcessInstanceEntity();
-        e.setId(UUID.randomUUID().toString());
-        e.setProcessDefinitionName("process-definition");
-        e.setRootProcessInstanceId(rootId);
-        return e;
-    }
-
-    private static ProcessInstanceEntity createSubprocessOf(String parentId, String rootId) {
-        ProcessInstanceEntity e = new ProcessInstanceEntity();
-        e.setId(UUID.randomUUID().toString());
-        e.setProcessDefinitionName("subprocess-definition");
-        e.setParentId(parentId);
-        e.setRootProcessInstanceId(rootId);
-        return e;
+        assertThat(result).isNotNull();
+        assertThat(result.getSubprocesses()).hasSize(2);
     }
 }
